5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1811_2564.log
== TEST (2019-06-06 11:37:35) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gols2 = array(eval(input("gols do time advesario: ")))
e = 0
v = 0				 
d = 0
for i in gols:
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    gols2 = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:38:41) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gols_2 = array(eval(input("gols do time advesario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gols_2[i] == 0):
		e = e + 1
	elif(gols[i]-gols_2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    gols_2 = array(eval(input()))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:39:03) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gol = array(eval(input("gols do time advesario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    gol = array(eval(input()))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:39:23) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gols2 = array(eval(input("gols do time advesario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    gols2 = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:39:49) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    e = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:40:35) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    e = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:41:03) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))

e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 4
    e = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:42:31) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gols2 = array(eval(input("gols adversrios efetuados: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    gols2 = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:42:40) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gols2 = array(eval(input("gols adversrios efetuados: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    gols2 = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:43:39) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gols2 = array(eval(input("gols adversarios efetuados: ")))
 
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)
-- ERROR:
File "XXXX", line 3
    gols2 = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:43:49) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gols2 = array(eval(input("gols adversarios efetuados: ")))
 

-- ERROR:
File "XXXX", line 3
    gols2 = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:43:56) 
-- CODE:
from numpy import *


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:15) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:41) 
-- CODE:
from numpy import *
gols = array(eval(input("gols efetuados: "))
gols2 = array(eval(input("gols adversarios efetuados: ")))
 

-- ERROR:
File "XXXX", line 3
    gols2 = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:38) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:43) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
	z[1] = v
	z[2] = e
	z[3] = d
print(z)

 

-- ERROR:
File "XXXX", line 15
    z[1] = v
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:55) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gol[i] == 0):
		e = e + 1
	elif(gols[i]-gol[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[1] = v
z[2] = e
z[3] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:46:25) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[1] = v
z[2] = e
z[3] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:46:56) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:47:29) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[2] = v
z[1] = e
z[0] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:47:47) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[2] = v
z[1] = e
z[0] = d
print(z)

 

-- EXECUTION TIME:
1.03928
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:48:48) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[2] = v
z[1] = e
z[0] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:49:48) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in gols:
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[2] = v
z[1] = e
z[0] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:55:02) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
for i in range(gols):
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[2] = v
z[1] = e
z[0] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:56:27) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
c = 0
while(c<size(gols)):
	for i in gols:
		if(gols[i]-gols2[i] == 0):
			e = e + 1
		elif(gols[i]-gols2[i] > 0):
			v = v + 1
		else:
			d = d + 1
		c = c + 1
z = zeros(3,dtype = int)
z[2] = v
z[1] = e
z[0] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:56:49) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
c = 0
while(c<size(gols)):
	for i in gols:
		if(gols[i]-gols2[i] == 0):
			e = e + 1
		elif(gols[i]-gols2[i] > 0):
			v = v + 1
		else:
			d = d + 1
		c = c + 1
z = zeros(3,dtype = int)
z[2] = v
z[1] = e
z[0] = d
print(z)

 

-- EXECUTION TIME:
0.968184
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:56:52) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
c = 0
while(c<size(gols)):
	for i in gols:
		if(gols[i]-gols2[i] == 0):
			e = e + 1
		elif(gols[i]-gols2[i] > 0):
			v = v + 1
		else:
			d = d + 1
		c = c + 1
z = zeros(3,dtype = int)
z[2] = v
z[1] = e
z[0] = d
print(z)

 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:57:43) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
e = 0
v = 0
d = 0
c = 0
while(c<size(gols)):
	for i in gols:
		if(gols[i]-gols2[i] == 0):
			e = e + 1
		elif(gols[i]-gols2[i] > 0):
			v = v + 1
		else:
			d = d + 1
		c = c + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)

 

-- EXECUTION TIME:
1.0209
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:12:38) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
v = 0
d = 0
e = 0
i = 0
while(i<size(gols)):
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
	i = i + 1 
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:13:10) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
v = 0
d = 0
e = 0
i = 0
while(i<size(gols)):
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
	i = i + 1 
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
-- EXECUTION TIME:
1.12609
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:17:39) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
v = 0
d = 0
e = 0
i = 0
for i in gols:
		if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
-- ERROR:
File "XXXX", line 10
    e = e + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:17:48) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
v = 0
d = 0
e = 0
i = 0
for i in gols:
	if(gols[i]-gols2[i] == 0):
		e = e + 1
	elif(gols[i]-gols2[i] > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:27:17) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
resultado = gols-gols2
v = 0
d = 0
e = 0
i = 0
for i in resultado:
	if(i == 0):
		e = e + 1
	elif(i > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:28:47) 
-- CODE:
from numpy import *
gols = array(eval(input("gols marcados: ")))
gols2 = array(eval(input("gols marcados pelo adversario: ")))
resultado = gols-gols2
v = 0
d = 0
e = 0
i = 0
for i in resultado:
	if(i == 0):
		e = e + 1
	elif(i > 0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
-- EXECUTION TIME:
1.17886
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
